syntax = "proto3";

package product;

service ProductService {
    rpc GetProductById(ProductRequest) returns (ProductResponse);
    rpc GetProductsByIds(ProductsRequest) returns (ProductsResponse); // New batch fetch method
}

message ProductRequest {
    string id = 1; // Single Product ID
}

message ProductResponse {
    string id = 1;
    string productName = 2;
    string productDescription = 3;
    string pictureLocation = 4;
    double unitWeight = 5;
    double unitPrice = 6;
    int32 availableQuantity = 7;
}

message ProductsRequest {
    repeated string ids = 1; // List of Product IDs
}

message ProductsResponse {
    repeated ProductResponse products = 1; // List of Product Details
}
